# rustletters

./: .dockerignore  .env.sample  Cargo.toml  Dockerfile  configuration.yml.sample  docker-compose.yml  spec.yml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yml
migrations/: 20201229182618_create_subscriptions_table.sql
src/: configuration.rs  domain.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
