[package]
name = "rustletters"
version = "0.1.0"
authors = ["Arturo Linares <arturo.linares@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rustletters"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
tokio = { version = "0.2.6", features = ["full"] }
serde = "1.0.118"
clap = "2.33.3"
config = "0.10.1"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
log = "0.4.11"
env_logger = "0.8.2"

[dependencies.sqlx]
version = "0.4.1"
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
reqwest = "0.10.10"
