[package]
name = "rustletters"
version = "0.1.0"
authors = ["Arturo Linares <arturo.linares@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rustletters"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
tokio = { version = "0.2.6", features = ["full"] }
serde = "1.0.118"
config = "0.10.1"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing = "0.1.16"
tracing-futures = "0.2.4"
tracing-bunyan-formatter = "0.1.7"
tracing-log = "0.1.1"
tracing-actix-web = "0.2.1"
serde-aux = "2.1.1"
unicode-segmentation = "1.7.1"

[dependencies.sqlx]
version = "0.4.1"
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dev-dependencies]
claim = "0.4.0"
lazy_static = "1.4.0"
reqwest = "0.10.10"
